--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="position: absolute;">
     <section class="header">
         <nav class="nav">
             <span id="header-logo">Header Logo</span>
@@ -24,6 +24,29 @@
                 <div class="head-img">
                     <p style="color: #f9faf8; align-items: center;">This is a placeholder for an image</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h2 class="info-heading">Some Random Information</h2>
+        </div>
+        <div class="info-content">
+            <div class="img-1">
+                <div class="img-wrapper"></div>
+                <p class="info-text">This is some subtext under an illustration or image.</p>
+            </div>
+            <div class="img-2">
+                <div class="img-wrapper"><img class="info-img" src="histogram.jpg" alt=""></div>
+                <p class="info-text">This is some subtext under an illustration or image.</p>
+            </div>
+            <div class="img-3">
+                <div class="img-wrapper"><img class="info-img" src="histogram.jpg" alt=""></div>
+                <p class="info-text">This is some subtext under an illustration or image.</p>
+            </div>
+            <div class="img-4">
+                <div class="img-wrapper"><img class="info-img" src="histogram.jpg" alt=""></div>
+                <p class="info-text">This is some subtext under an illustration or image.</p>
             </div>
         </div>
     </section>
