--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="info">
         <div>
             <h2 class="info-heading">Some Random Information</h2>
         </div>
@@ -48,6 +48,13 @@
                 <div class="img-wrapper"><img class="info-img" src="histogram.jpg" alt=""></div>
                 <p class="info-text">This is some subtext under an illustration or image.</p>
             </div>
+        </div>
+    </section>
+    <section class="quote">
+        <div id="quote-box">
+            <span><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla assumenda deserunt totam dicta consequatur mollitia, vel quaerat praesentium atque laudantium tenetur voluptatibus cum excepturi iste! Cumque expedita illum quidem laborum.</i></span>
+            <br>
+            <span id="quote-name">- Wolverine (Logan)</span>
         </div>
     </section>
 </body>
