--- a/index.html
+++ b/index.html
@@ -54,7 +54,18 @@
         <div id="quote-box">
             <span><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla assumenda deserunt totam dicta consequatur mollitia, vel quaerat praesentium atque laudantium tenetur voluptatibus cum excepturi iste! Cumque expedita illum quidem laborum.</i></span>
             <br>
-            <span id="quote-name">- Wolverine (Logan)</span>
+            <span id="quote-name">- Thor, God of Thunder</span>
+        </div>
+    </section>
+    <section class="action">
+        <div class="action-box">
+            <div class="text">
+                <h2 id="action-head">Call to action! It's time!</h2>
+                <p id="action-text">Signup for our product by clicking that button right over there</p>
+            </div>
+            <div class="button">
+                <button class="action-btn">Signup</button>
+            </div>
         </div>
     </section>
 </body>
