--- a/index.html
+++ b/index.html
@@ -68,5 +68,10 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <div id="footer-box">
+            <h3>Copyright &#169 The Odin Project 2021</h3>
+        </div>
+    </section>
 </body>
 </html>
