--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
             <a class="nav-links" href="#">header link three</a>
         </nav>
         <div class="head-container">
-            <div class="awesome">
+            <div class="head-left">
+                <h2 class="awesome-text">This website is awesome</h2>
+                <p class="awesome-p">This website has some subtext that goes under the main title. It's smaller font and the color is lower contrast</p>
+                <button class="signup-btn">Sign Up</button>
+            </div>
+            <div class="head-right">
+                <div class="head-img">
+                    <p style="color: #f9faf8; align-items: center;">This is a placeholder for an image</p>
+                </div>
+            </div>
+            <!-- <div class="awesome">
                 <h2 class="awesome-text">This website is awesome</h2>
                 <p class="awesome-p">This website has some subtext that goes under the main title. It's smaller font and the color is lower contrast</p>
                 <button class="signup-btn">Sign Up</button>
@@ -24,7 +34,7 @@
                 <div class="head-img">
                     <p style="color: #f9faf8; align-items: center;">This is a placeholder for an image</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <section class="info">
