UI/Fixes with Flex

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body style="position: absolute;">
     <section class="header">
         <nav class="nav">
-            <span id="header-logo">Header Logo</span>
-            <a class="nav-links" href="#" id="link1">header link one</a>
-            <a class="nav-links" href="#">header link two</a>
-            <a class="nav-links" href="#">header link three</a>
+            <div class="left">
+                <span id="header-logo">Header Logo</span>
+            </div>
+            <div class="right">
+                <a class="nav-links" href="#" id="link1">header link one</a>
+                <a class="nav-links" href="#">header link two</a>
+                <a class="nav-links" href="#">header link three</a>
+            </div>
         </nav>
         <div class="head-container">
             <div class="head-left">
@@ -25,16 +29,6 @@
                     <p style="color: #f9faf8; align-items: center;">This is a placeholder for an image</p>
                 </div>
             </div>
-            <!-- <div class="awesome">
-                <h2 class="awesome-text">This website is awesome</h2>
-                <p class="awesome-p">This website has some subtext that goes under the main title. It's smaller font and the color is lower contrast</p>
-                <button class="signup-btn">Sign Up</button>
-            </div>
-            <div>
-                <div class="head-img">
-                    <p style="color: #f9faf8; align-items: center;">This is a placeholder for an image</p>
-                </div>
-            </div> -->
         </div>
     </section>
     <section class="info">
