--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             </div>
         </div>
     </section>
-    <section class="footer">
+    <section>
         <div id="footer-box">
-            <h3>Copyright &#169 The Odin Project 2021</h3>
+            <p>Copyright &#169 The Odin Project 2021<p>
         </div>
     </section>
 </body>
