Nav Links Fixed

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </div>
             <div class="right">
                 <a class="nav-links" href="#" id="link1">header link one</a>
-                <a class="nav-links" href="#">header link two</a>
-                <a class="nav-links" href="#">header link three</a>
+                <a class="nav-links" href="#" id="link2">header link two</a>
+                <a class="nav-links" href="#" id="link3">header link three</a>
             </div>
         </nav>
         <div class="head-container">
