quote-section fixed with flexbox

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
         </div>
     </section>
     <section class="quote">
-        <div id="quote-box">
-            <span><i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla assumenda deserunt totam dicta consequatur mollitia, vel quaerat praesentium atque laudantium tenetur voluptatibus cum excepturi iste! Cumque expedita illum quidem laborum.</i></span>
-            <br>
-            <span id="quote-name">- Thor, God of Thunder</span>
+        <div class="quote-box">
+            <span class="quotation">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla assumenda deserunt totam dicta consequatur mollitia, vel quaerat praesentium atque laudantium tenetur voluptatibus cum excepturi iste! Cumque expedita illum quidem laborum.</span>
+            <span class="author">- Thor, God of Thunder</span>
         </div>
     </section>
     <section class="action">
